chore(scroll): fix overflow bug

--- a/app/components/ul_component/index.module.scss
+++ b/app/components/ul_component/index.module.scss
@@ -26,7 +26,7 @@
 
 .background {
   position: absolute;
-  width: 100vw;
+  width: 100%;
   height: 100vh;
   top: 0;
   left: 0;
